Refactor About section animations for enhanced user experience. Improve scroll-based and sequential animations, and update CSS for better layout and responsiveness.

--- a/lab-demo/_data/about.yml
+++ b/lab-demo/_data/about.yml
@@ -10,7 +10,7 @@ description: >
   that can extract meaningful insights from large-scale data.
 
 # Main hero image for the About section
-hero_image: "/assets/images/about/lab_hero.jpg"
+hero_image: "/assets/images/about/대표_이미지.png"
 
 # Research areas/keywords
 research_areas:
