Update members.yml kidong jpg

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -100,7 +100,7 @@
       description: "KT-AI M.S. Program in School of Computing"
     - period: "Aug. 2024"
       description: "B.S. in Philosophy (double major: Computer Science and Engineering), Sogang University"
-  image: "/assets/images/members/kidong.jpg"
+  image: "/assets/images/members/kidong.JPG"
 
 # Alumni -------------------------------------------------------------
 - name: "Jaejun Lee (이재준)"
