Refactor photo gallery layout to use flexbox for improved responsiveness and visual consistency. Remove pagination functionality and implement dynamic loading of photos with JavaScript for better performance. Update CSS styles for photo items and columns.

--- a/_data/photos.yml
+++ b/_data/photos.yml
@@ -13,45 +13,67 @@
 
 - image: "/assets/images/photos/photo1.jpg"
   caption: "Photo caption"
+  date: "2025-01-15"
 - image: "/assets/images/photos/photo2.jpg"
   caption: "Photo caption"
+  date: "2025-01-10"
 - image: "/assets/images/photos/photo3.jpg"
   caption: "Photo caption"
+  date: "2025-01-05"
 - image: "/assets/images/photos/photo4.jpg"
   caption: "Photo caption"
+  date: "2024-12-20"
 - image: "/assets/images/photos/photo5.jpg"
   caption: "Photo caption"
+  date: "2024-12-15"
 - image: "/assets/images/photos/photo6.jpg"
   caption: "Photo caption"
+  date: "2024-12-10"
 - image: "/assets/images/photos/photo7.jpg"
   caption: "Photo caption"
+  date: "2024-12-05"
 - image: "/assets/images/photos/photo8.jpg"
   caption: "Photo caption"
+  date: "2024-11-25"
 - image: "/assets/images/photos/photo9.jpg"
   caption: "Photo caption"
+  date: "2024-11-20"
 - image: "/assets/images/photos/photo10.jpg"
   caption: "Photo caption"
+  date: "2024-11-15"
 - image: "/assets/images/photos/photo11.jpg"
   caption: "Photo caption"
+  date: "2024-11-10"
 - image: "/assets/images/photos/photo12.jpg"
   caption: "Photo caption"
+  date: "2024-11-05"
 - image: "/assets/images/photos/photo13.jpg"
   caption: "Photo caption"
+  date: "2024-10-30"
 - image: "/assets/images/photos/photo14.jpg"
   caption: "Photo caption"
+  date: "2024-10-25"
 - image: "/assets/images/photos/photo15.jpg"
   caption: "Photo caption"
+  date: "2024-10-20"
 - image: "/assets/images/photos/photo16.jpg"
   caption: "Photo caption"
+  date: "2024-10-15"
 - image: "/assets/images/photos/photo17.jpg"
   caption: "Photo caption"
+  date: "2024-10-10"
 - image: "/assets/images/photos/photo18.jpg"
   caption: "Photo caption"
+  date: "2024-10-05"
 - image: "/assets/images/photos/photo19.jpg"
   caption: "Photo caption"
+  date: "2024-09-30"
 - image: "/assets/images/photos/photo20.jpg"
   caption: "Photo caption"
+  date: "2024-09-25"
 - image: "/assets/images/photos/photo21.jpg"
   caption: "Photo caption"
+  date: "2024-09-20"
 - image: "/assets/images/photos/photo22.jpg"
   caption: "Photo caption"
+  date: "2024-09-15"
