Fixed dir for professor CV

--- a/_data/professor.yml
+++ b/_data/professor.yml
@@ -17,7 +17,7 @@ education:
 
 research_interests: "Graph Machine Learning, Deep Learning, Data Mining, Big Data Analytics, and Data Science."
 
-cv_link: "/down/joyce_CV_public.pdf"
+cv_link: "/assets/pdf/joyce_CV_public.pdf"
 
 bio: |
   Add professor's biography here. You can use markdown formatting.
