Add social links side menu and update photo formats: Introduced a fixed side menu for GitHub and YouTube links in the about section, enhancing accessibility. Updated photo assets from JPG to WEBP format for improved loading performance and removed outdated JPG files.

--- a/_data/photos.yml
+++ b/_data/photos.yml
@@ -12,72 +12,78 @@
 #   caption: "Research presentation"
 #   date: "YYYY-MM-DD"
 # ==================================================================================
-- image: "/assets/images/photos/photo1.jpg"
+- image: "/assets/images/photos/photo1.webp"
   caption: "Photo caption"
   date: "2025-01-01"
-- image: "/assets/images/photos/photo2.jpg"
+- image: "/assets/images/photos/photo2.webp"
   caption: "Photo caption"
   date: "2025-02-01"
-- image: "/assets/images/photos/photo3.jpg"
+- image: "/assets/images/photos/photo3.webp"
   caption: "Photo caption"
   date: "2025-02-05"
-- image: "/assets/images/photos/photo4.jpg"
+- image: "/assets/images/photos/photo4.webp"
   caption: "Photo caption"
   date: "2025-02-10"
-- image: "/assets/images/photos/photo5.jpg"
+- image: "/assets/images/photos/photo5.webp"
   caption: "Photo caption"
   date: "2025-02-15"
-- image: "/assets/images/photos/photo6.jpg"
+- image: "/assets/images/photos/photo6.webp"
   caption: "Photo caption"
   date: "2025-02-20"
-- image: "/assets/images/photos/photo7.jpg"
+- image: "/assets/images/photos/photo7.webp"
   caption: "Photo caption"
   date: "2025-02-25"
-- image: "/assets/images/photos/photo8.jpg"
+- image: "/assets/images/photos/photo8.webp"
   caption: "Photo caption"
   date: "2025-03-05"
-- image: "/assets/images/photos/photo9.jpg"
+- image: "/assets/images/photos/photo9.webp"
   caption: "Photo caption"
   date: "2025-03-10"
-- image: "/assets/images/photos/photo10.jpg"
+- image: "/assets/images/photos/photo10.webp"
   caption: "Photo caption"
   date: "2025-03-15"
-- image: "/assets/images/photos/photo11.jpg"
+- image: "/assets/images/photos/photo11.webp"
   caption: "Photo caption"
   date: "2025-03-20"
-- image: "/assets/images/photos/photo12.jpg"
+- image: "/assets/images/photos/photo12.webp"
   caption: "Photo caption"
   date: "2025-03-25"
-- image: "/assets/images/photos/photo13.jpg"
+- image: "/assets/images/photos/photo13.webp"
   caption: "Photo caption"
   date: "2025-04-01"
-- image: "/assets/images/photos/photo14.jpg"
+- image: "/assets/images/photos/photo14.webp"
   caption: "Photo caption"
   date: "2025-04-05"
-- image: "/assets/images/photos/photo15.jpg"
+- image: "/assets/images/photos/photo15.webp"
   caption: "Photo caption"
   date: "2025-04-10"
-- image: "/assets/images/photos/photo16.jpg"
+- image: "/assets/images/photos/photo16.webp"
   caption: "Photo caption"
   date: "2025-04-15"
-- image: "/assets/images/photos/photo17.jpg"
+- image: "/assets/images/photos/photo17.webp"
   caption: "Photo caption"
   date: "2025-04-20"
-- image: "/assets/images/photos/photo18.jpg"
+- image: "/assets/images/photos/photo18.webp"
   caption: "Photo caption"
   date: "2025-04-25"
-- image: "/assets/images/photos/photo19.jpg"
+- image: "/assets/images/photos/photo19.webp"
   caption: "Photo caption"
   date: "2025-05-01"
-- image: "/assets/images/photos/photo20.jpg"
+- image: "/assets/images/photos/photo20.webp"
   caption: "Photo caption"
   date: "2025-05-05"
-- image: "/assets/images/photos/photo21.jpg"
+- image: "/assets/images/photos/photo21.webp"
   caption: "Photo caption"
   date: "2025-05-10"
-- image: "/assets/images/photos/photo22.jpg"
+- image: "/assets/images/photos/photo22.webp"
   caption: "Photo caption"
   date: "2025-05-15"
-- image: "/assets/images/photos/photo23.png"
+- image: "/assets/images/photos/photo24.webp"
+  caption: "Photo caption"
+  date: "2025-07-15"
+- image: "/assets/images/photos/photo25.webp"
+  caption: "Photo caption"
+  date: "2025-07-16"
+- image: "/assets/images/photos/photo23.webp"
   caption: "Photo caption"
   date: "2025-12-29"
