--- a/_data/about.yml
+++ b/_data/about.yml
@@ -18,16 +18,22 @@ hero_images:
 research_areas:
   - name: "Graph Machine Learning"
     description: "We investigate machine learning techniques for graph-structured data. Our research focuses on developing algorithms to effectively learn from and analyze complex relational data, such as social networks, knowledge graphs, and biological networks."
+    image: "/assets/images/about/GML.png"
   - name: "Deep Learning"
     description: "We work on the development and optimization of deep neural network models. We design efficient and scalable deep learning architectures across diverse domains and apply them to solve real-world problems."
+    image: "/assets/images/about/DL.png"
   - name: "Knowledge Graphs"
     description: "We research techniques for knowledge graph construction, embedding, and reasoning. We develop methodologies to extract and utilize meaningful semantic information from large-scale knowledge bases."
+    image: "/assets/images/about/KG.png"
   - name: "Data Mining"
     description: "We study techniques to discover useful patterns and knowledge from large-scale datasets. Our work involves developing diverse data mining algorithms for clustering, classification, and anomaly detection."
+    image: "/assets/images/about/DM.png"
   - name: "Big Data Analytics"
     description: "We research scalable algorithms to efficiently process and analyze massive datasets. We develop high-performance data analytics systems designed to operate in distributed computing environments."
+    image: "/assets/images/about/BDA.png"
   - name: "Data Science"
     description: "We explore various facets of data science to address industrial and scientific challenges. Our research encompasses the entire data pipeline, including data collection, preprocessing, visualization, and modeling."
+    image: "/assets/images/about/DS.png"
 
 # ==================================================================================
 # Non-Used Sections ----------------------------------------------------------------
