Refactor organization card layout to support subinstitution logos: Enhance the display of organization cards by introducing a new layout for projects with subinstitution logos, improving visual hierarchy and organization. Update corresponding styles for better alignment and responsiveness.

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -7,6 +7,7 @@
 #     - title: "Project Title"
 #       period: "Mar. 2025 ~ Feb. 2028"
 #       role: "Principal Investigator" (optional)
+#       subinstitution_logo: "/assets/images/projects/subinstitution-logo.png" (optional)
 # ==================================================================================
 - organization: "National Research Foundation of Korea"
   logo: "/assets/images/projects/nrf_logo.png"
