about image added

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -16,6 +16,8 @@ hero_images:
   - "/assets/images/about/대표_이미지.png"
   - "/assets/images/about/test_image1.png"
   - "/assets/images/about/test_image2.png"
+  - "/assets/images/about/test_image3.png"
+  - "/assets/images/about/test_image4.png"
   - "/assets/images/about/photo6.webp"
 
 # Research areas/keywords
